--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "Megan Kirkbride",
   "license": "ISC",
   "dependencies": {
+    "gray-matter": "^4.0.2",
+    "marked": "^2.0.1",
     "next": "^10.0.8",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
