Add Stripe implementation

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Megan Kirkbride",
   "license": "ISC",
   "dependencies": {
+    "@stripe/stripe-js": "^1.13.1",
     "axios": "^0.21.1",
     "gray-matter": "^4.0.2",
     "marked": "^2.0.1",
@@ -19,6 +20,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
+    "stripe": "^8.138.0",
     "styled-components": "^5.2.1",
     "styled-normalize": "^8.0.7"
   },
