--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "styled-normalize": "^8.0.7"
   },
   "devDependencies": {
-    "babel-plugin-styled-components": "^1.12.0"
+    "@types/react": "^17.0.3",
+    "babel-plugin-styled-components": "^1.12.0",
+    "typescript": "^4.2.3"
   }
 }
