--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gray-matter": "^4.0.2",
     "marked": "^2.0.1",
     "next": "^10.0.8",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
