--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "next start",
     "export": "next export",
     "predev": "node ./buildFunctionContent.js",
-    "prebuild": "node ./buildFunctionContent.js"
+    "prebuild": "node ./buildFunctionContent.js",
+    "test": "jest --watch"
   },
   "author": "Megan Kirkbride",
   "license": "ISC",
@@ -28,14 +29,17 @@
     "styled-normalize": "^8.0.7"
   },
   "devDependencies": {
+    "@testing-library/react": "^11.2.5",
     "@typescript-eslint/eslint-plugin": "^4.17.0",
     "@typescript-eslint/parser": "^4.17.0",
+    "babel-jest": "^26.6.3",
     "babel-plugin-styled-components": "^1.12.0",
     "eslint": "^7.22.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
-    "eslint-plugin-react-hooks": "^4.2.0"
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "jest": "^26.6.3"
   }
 }
